# committee.report

./: .gitignore  Dockerfile  README.md  build.sh  justfile  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: save-to-epub.yml
data/: CRPT-117hrpt507.htm
docs/: setup.md
frontend/: about.html  data.json  index.html  main.css  main.js
src/: creport.py  get_reports.py  helpers.py  main.py
terraform/: iam.tf  main.tf  networking.tf  scheduler.tf  variables.tf
tests/: create_blocks.py  gen_report_boxes.py  test_blocks.json  test_creport.py  test_helpers.py
