[tool.poetry]
name = "crpt2epub"
version = "0.1.0"
description = ""
authors = ["V. David Zvenyach <dave@zvenyach.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = "^1.21.1"
click = "^8.1.3"
black = "^22.12.0"
pypdf = "^3.2.0"
pypdfium2 = "^3.19.0"
tika = "^2.6.0"
wxPython = "^4.2.0"
pytesseract = "^0.3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
