[tool.poetry]
name = "crpt2epub"
version = "0.1.0"
description = "Convert Committee Reports to ePub"
authors = ["V. David Zvenyach <dave@zvenyach.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = "^1.21.1"
click = "^8.1.3"
Pillow = "^9.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
